<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/dailog_bg">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/signika_semi_bold"
            android:text="@string/choose_a_class"
            android:textAlignment="center"
            android:textColor="@color/text_color1"
            android:textSize="20sp"
            android:layout_marginTop="20dp"/>

        <ListView
            android:id="@+id/class_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@null"
            android:layout_marginTop="20dp"/>

        <Button
            android:id="@+id/continue_btn"
            android:layout_width="200dp"
            android:layout_height="49dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:text="@string/continue_btn"
            android:textColor="@color/colorWhite"
            android:background="@drawable/ic_rectangle_24"/>

        <TextView
            android:id="@+id/quit_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quit"
            android:layout_marginTop="16dp"
            android:textAlignment="center"
            android:textColor="@color/text_color1"
            android:layout_marginBottom="20dp"/>

</LinearLayout>